# esports-manager

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Pipfile  README.md  esm.py  pyproject.toml
esm/: definitions.py
esm-ui/: app.py  package-lock.json  package.json  tailwind.config.js
esm-ui/api/: index.py
esm-ui/src/: App.tsx
esm-ui/static/css/: style.css
esm-ui/templates/: base.html  index.html
esm/core/: db.py  esmcore.py  settings.py
esm/core/esports/moba/: champion.py  championship.py  match_tester.py  moba_definitions.py  mobamatch.py  mobaplayer.py  mobaregion.py  mobateam.py  progression.py
esm/core/esports/moba/generator/: __init__.py  generate_champions.py  generate_players.py  generate_teams.py
esm/core/esports/moba/simulation/: moba_event_base.py  moba_event_type.py  moba_sim_engine.py  moba_sim_match.py  mobamatchsimulation.py  mobasimulationengine.py  picksbans.py
esm/core/esports/rts/: rts_definitions.py  rts_map.py  rts_match.py  rts_player.py  rts_team.py
esm/core/utils/: __init__.py
esm/tests/: conftest.py  test_champions.py  test_db.py  test_generate_champions.py  test_generate_players.py  test_generate_teams.py  test_match.py  test_moba_simulation.py  test_picks_bans.py  test_players.py  test_settings.py
esm_ui/: __init__.py  app.py  package-lock.json  tailwind.config.js
esm_ui/static/css/: imgblur.css  input.css  output.css  style.css
esm_ui/templates/: base.html  index.html  layout.html
esm_ui/templates/pages/: home.html  inbox.html  roster.html
esm_ui/templates/partials/: navbar.html  sidebar.html
(+16 files in other folders)
